[metadata]
name = bitflyer_http_api
version = 0.0.4
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/onsentamago/bitflyer_http_api
license_files = LICENSE.txt
author = onsentamago

[options]
packages =
    bitflyer_http_api
install_requires =
    requests~=2.25.0
